--- a/app/templates/mainmenu.html
+++ b/app/templates/mainmenu.html
@@ -27,23 +27,24 @@
 					<menu-item ng-repeat="menuitem in data.savingAccounts">Yo</menu-item>
 				</ul>
 			</li>
-			<li>
-				<h3>Nieuws en kennis</h3>
-				<ul>
-					<li>Interessant voor u</li>
-				</ul>
-			</li>
-			<li>
-				<h3>Service</h3>
-				<ul>
-					<li>Zelf regelen</li>
-					<li>Feedback</li>
-					<li>Over deze app</li>
-				</ul>
-			</li>
-
 		</ul>
 	</li>
-
+	<li>
+		<h3>Nieuws en kennis</h3>
+		<ul>
+			<li>
+				<span>Interessant voor u</span>
+				<span>{{data.newNewsItems}}</span>
+			</li>
+		</ul>
+	</li>
+	<li>
+		<h3>Service</h3>
+		<ul>
+			<li>Zelf regelen</li>
+			<li>Feedback</li>
+			<li>Over deze app</li>
+		</ul>
+	</li>
 	<li class="footerCard">Uitloggen</li>
 </ul>
